@@ -1,3 +1,9 @@
+2015-04-09  Marek Polacek  <polacek@redhat.com>
+	    Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/65554
+	* g++.dg/opt/pr65554.C: New test.
+
 2015-04-09  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/65690
